[gd_scene load_steps=14 format=1]

[ext_resource path="res://scripts/game_select.gd" type="Script" id=1]
[ext_resource path="res://assets/shaders/blur.tres" type="CanvasItemMaterial" id=2]
[ext_resource path="res://assets/gui_themes/main.tres" type="Theme" id=3]
[ext_resource path="res://assets/sprites/gui/dice.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/portrait/human.png" type="Texture" id=5]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sprites/portrait/monster.png" type="Texture" id=7]
[ext_resource path="res://assets/shaders/wavy.tres" type="CanvasItemMaterial" id=8]
[ext_resource path="res://assets/sprites/gui/vs.png" type="Texture" id=9]
[ext_resource path="res://assets/sounds/button.wav" type="Sample" id=10]

[sub_resource type="DynamicFont" id=3]

font/size = 32
extra_spacing/top = -3
extra_spacing/bottom = -1
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[sub_resource type="Animation" id=1]

resource/name = "start"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Human:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 800, 96 ), Vector2( 544, 96 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Monster:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( -256, 96 ), Vector2( 0, 96 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VS:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 0, -352 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SampleLibrary" id=2]

samples/button = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}

[node name="Main" type="Node"]

script/script = ExtResource( 1 )

[node name="Selection" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="BackgroundBlur" type="ColorFrame" parent="Selection"]

material/material = ExtResource( 2 )
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
color = Color( 1, 1, 1, 1 )

[node name="Panel" type="Panel" parent="Selection"]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 352.0
margin/right = 0.0
margin/bottom = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="Selection/Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 8
alignment = 1

[node name="Monster" type="Control" parent="Selection/Panel/HBoxContainer"]

rect/min_size = Vector2( 128, 48 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 134.0
margin/top = 40.0
margin/right = 262.0
margin/bottom = 88.0

[node name="Controller" type="OptionButton" parent="Selection/Panel/HBoxContainer/Monster"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 10.0
margin/right = 0.0
margin/bottom = 0.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Player"
flat = false
align = 0
selected = 0
items = [ "Player", null, false, 0, null, "CPU", null, false, 1, null ]

[node name="Label" type="Label" parent="Selection/Panel/HBoxContainer/Monster"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 10.0
text = "Monster Controller"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Human" type="Control" parent="Selection/Panel/HBoxContainer"]

rect/min_size = Vector2( 128, 48 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 538.0
margin/top = 40.0
margin/right = 666.0
margin/bottom = 88.0

[node name="Controller" type="OptionButton" parent="Selection/Panel/HBoxContainer/Human"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 10.0
margin/right = 0.0
margin/bottom = 0.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Player"
flat = false
align = 0
selected = 0
items = [ "Player", null, false, 0, null, "CPU", null, false, 1, null ]

[node name="Label" type="Label" parent="Selection/Panel/HBoxContainer/Human"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 10.0
text = "Human Controller"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MapSelect" type="OptionButton" parent="Selection/Panel"]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 96.0
margin/right = -96.0
margin/bottom = 72.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="Label" type="Label" parent="Selection/Panel/MapSelect"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -10.0
margin/right = 0.0
margin/bottom = 0.0
text = "Map Select"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RandomMap" type="TextureButton" parent="Selection/Panel/MapSelect"]

anchor/left = 1
anchor/right = 1
hint/tooltip = "Random Map"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = -16.0
margin/right = 0.0
margin/bottom = 0.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="StartButton" type="Button" parent="Selection/Panel"]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 64.0
margin/right = -48.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start Game"
flat = false

[node name="BackButton" type="Button" parent="Selection/Panel"]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 32.0
margin/right = 64.0
margin/bottom = 8.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "< Back"
flat = true

[node name="Human" type="TextureFrame" parent="Selection"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 384.0
margin/right = -256.0
margin/bottom = 128.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="Label" type="Label" parent="Selection/Human"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -32.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.0941176, 0.0784314, 0.145098, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Humans"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Monster" type="TextureFrame" parent="Selection"]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -256.0
margin/top = 384.0
margin/right = 0.0
margin/bottom = 128.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="Label" type="Label" parent="Selection/Monster"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -32.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.0941176, 0.0784314, 0.145098, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Monsters"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VS" type="TextureFrame" parent="Selection"]

material/material = ExtResource( 8 )
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -352.0
margin/right = 0.0
margin/bottom = 480.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Selection"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/start = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "start"

[node name="SFX" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 2 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="item_selected" from="Selection/Panel/HBoxContainer/Monster/Controller" to="." method="_on_Controller_item_selected"]

[connection signal="item_selected" from="Selection/Panel/HBoxContainer/Human/Controller" to="." method="_on_Controller_item_selected"]

[connection signal="item_selected" from="Selection/Panel/MapSelect" to="." method="_on_MapSelect_item_selected"]

[connection signal="pressed" from="Selection/Panel/MapSelect/RandomMap" to="." method="_on_RandomMap_pressed"]

[connection signal="pressed" from="Selection/Panel/StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="Selection/Panel/BackButton" to="." method="_on_BackButton_pressed"]


